2005-04-14  Derek Scherger  <derek@echologic.com>

	* database_check.cc (check_db): fail with N(...) when problems are
	detected to exit with a non-zero status

2005-04-14  Derek Scherger  <derek@echologic.com>

	* monotone.texi (Informative): update description of 'diff' with
	two revision arguments
	
2005-04-14  Matthew Gregan  <kinetik@orcon.net.nz>

	* win32/process.cc: Fix build on MingW 3.2.0-rc[123] by adding
	<sstream> include.

2005-04-14  Jon Bright  <jon@siliconcircus.com>
	* win32/process.cc (process_spawn): Add some extra debug info
	* std_hooks.lua (execute): If pid is -1, don't try and wait on
	the process

2005-04-14  Matt Johnston  <matt@ucc.asn.au>

	* change_set.cc (confirm_unique_entries_in_directories): use a
	  std::vector rather than std::map for better performance (only sort
	  once).
	* smap.hh: an invariant

2005-04-14  Nathaniel Smith  <njs@codesourcery.com>

	* tests/t_vcheck.at: Update notes.

2005-04-14  Jeremy Cowgar  <jeremy@cowgar.com>

	* monotone.texi (Making Changes): Fixed duplicate paragraph
	* NEWS: Corrected spelling error in my name.

2005-04-13  Nathaniel Smith  <njs@codesourcery.com>

	* monotone.texi (Informative): 'diff' with two revision arguments
	can now be filtered by file.
	
	* constants.cc (netcmd_payload_limit): Bump to 256 megs.

2005-04-14  Olivier Andrieu  <oliv__a@users.sourceforge.net>

	* Makefile.am: silence cmp

2005-04-14  Matthew Gregan  <kinetik@orcon.net.nz>

	* win32/terminal.cc (have_smart_terminal): Implement for Win32.

2005-04-13  Matthew Gregan  <kinetik@orcon.net.nz>

	* tests/t_netsync_largish_file.at: Add test for netsyncing largish
	(32MB) files.  This test is failing at present.
	* testsuite.at: Add new test.

2005-04-13  Nathaniel Smith  <njs@codesourcery.com>

	* tests/t_setup_checkout_modify_new_dir.at:
	* tests/t_update_off_branch.at: New tests.
	* testsuite.at: Add them.
	
	* commands.cc (checkout): Tweak branch checking logic.
	(update): Make user explicitly switch branches.
